# tmux-pane-minimize

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  STATE.md  default.nix  flake.nix  pane-minimize.tmux
.github/workflows/: ci.yml  release.yml
docs/recordings/: 00-hero.md  02-minimize-others.md  03-per-group-width.md  README.md
engine-rs/: Cargo.toml
engine-rs/src/: lib.rs  main.rs
scripts/: engine.manifest  ensure-engine.sh  marker.sh  tmux-min.sh  transform.sh
tests/: README.md  assert_layout.sh  diff_test.sh  ensure_engine_test.sh  gen_layouts.sh  gen_oracle_cases.sh  lib.sh  live_sequences.sh  run.sh  transform_cli.sh  transform_props.sh
