[package]
name = "engine-rs"
version = "0.1.0"
edition = "2024"

[dependencies]

[lib]
name = "tmux_min_transform"
path = "src/lib.rs"

[[bin]]
name = "tmux-min-transform"
path = "src/main.rs"

# Small, fast, single-shot CLI: optimize for a lean binary and quick cold start. LTO +
# one codegen unit shrink/inline; strip drops symbols (~half the size); panic=abort removes
# unwinding tables (the engine never needs to catch a panic — a malformed argv just exits).
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
